inclusion  layer manipulation trees and shapefiles

--- a/frontendSIGUI/src/app/components/angular-components/geodata/geo-elements/manipulate-county/manipulate-county.component.html
+++ b/frontendSIGUI/src/app/components/angular-components/geodata/geo-elements/manipulate-county/manipulate-county.component.html
@@ -19,7 +19,7 @@
         </button>  
     </div>
     <div class="button-colum">
-        <button mat-flat-button class="button-control-data" color="primary"> 
+        <button mat-flat-button class="button-control-data" color="primary" (click)="onClickShapeFile()"> 
             <mat-icon >home</mat-icon><br> 
             <span> ShapeFiles Municipios</span>           
         </button>                   
