--- a/frontendSIGUI/src/app/components/angular-components/geodata/sidenavs/geodata-manager/geodata-manager.component.scss
+++ b/frontendSIGUI/src/app/components/angular-components/geodata/sidenavs/geodata-manager/geodata-manager.component.scss
@@ -1,6 +1,6 @@
-@import '../../../../node_modules/@angular/material/theming';
+@import '../../../../../../../node_modules/@angular/material/theming';
 @include mat-core();
-@import '../../../styles.scss';
+@import '../../../../../../styles.scss';
 $primary : map-get($custom-theme , primary);
 $accent : map-get($custom-theme , accent);
 
@@ -21,6 +21,7 @@ mat-drawer-content{
     justify-content: center;
 }
 
+
 .sidenav-container-right{
     width: auto; 
     float: left;
@@ -31,35 +32,7 @@ mat-drawer-content{
     align-items: center;
     flex-direction: row;
 }
-.container-div{
-    width: auto; 
-    height: 100%;
-    float: left;
-    padding-right: 15px;
-    //padding-top: 10px;
-    padding-left: 15px;
-    //display: flex;
-    //align-items: center;
-//     width: auto;
-//     //flSSSSSSSSSSSSSSsoat: left;
-//     height: auto; 
-//    // border: 1px solid #555;
-//     background-color: white;
-//     display: flex;
-//     align-items: center;
-//    // justify-content: center;        
-}
 
-.container{
-    width: 100%;
-    //flSSSSSSSSSSSSSSsoat: left;
-    height: auto; 
-   // border: 1px solid #555;
-    background-color: white;
-    display: flex;
-    align-items: center;
-   // justify-content: center;        
-}
 .sidenav-button{
     width: 40px;
 }
