--- a/frontendSIGUI/src/app/layout/geo-data/geo-data.component.html
+++ b/frontendSIGUI/src/app/layout/geo-data/geo-data.component.html
@@ -1,57 +1,12 @@
 <mat-drawer-container autosize>
     <mat-drawer #drawer class="nav-container " mode="side" position="start" [opened]="isShowing">
-        <div style="width: 100%; height: 120%;">
-            <div class="subtitle-nav header-light-pallete">
-                <h2 class="secondary-text ">GEODADOS</h2>
-             </div>
-            <div class="sidenav-container color-pallete" >
-                <mat-nav-list style="width: auto;">
-                    <mat-list-item>
-                    <mat-icon mat-list-icon class="sidenav-button" (click)="isExpanded = !isExpanded" [ngClass]="{'rotated':isExpanded}">chevron_right</mat-icon> 
-                    </mat-list-item>  
-                    <mat-list-item >
-                        <mat-icon mat-list-icon class="sidenav-button">home</mat-icon> 
-                        <span *ngIf="isExpanded">Home</span>        
-                    </mat-list-item>
-                    <mat-list-item >
-                        <mat-icon mat-list-icon class="sidenav-button">home</mat-icon> 
-                        <span *ngIf="isExpanded" (click)="openDialog()">File</span>        
-                    </mat-list-item>
-                </mat-nav-list>
-            </div>
-            <div class="container-div">                
-                <div class="container">          
-                    <app-manipulate-county></app-manipulate-county>                    
-                </div>
-               <!-- managerVizualizaton.session_county -->
-                <div class="container" *ngIf="true">          
-                    <app-table-county></app-table-county>
-                </div>
-                <div class="container">  
-                    
-                    <div class="wrapper-manipulation">
-                        <div class="box-field-ex">
-                            <button mat-flat-button class="button-control-data" color="primary" > 
-                                <mat-icon >home</mat-icon><br> 
-                                <span>Excluir Municipios</span>           
-                            </button>   
-                        </div>
-                        <div class="box-field-ed">
-                            <button mat-flat-button class="button-control-data" color="primary" > 
-                                <mat-icon >home</mat-icon><br> 
-                                <span> Editar Municipios</span>           
-                            </button>               
-                        </div>
-                    </div> 
-                </div>
-            </div>
-        </div>
-        
+        <app-layer-manager *ngIf="managerManu.session_layers" [layers]="mapLayers"  style="width: 100%; height: 120%;" ></app-layer-manager>
+        <app-geodata-manager *ngIf="managerManu.session_geodata" [managerVizualizaton]="managerVizualizaton" style="width: 100%; height: 120%;" ></app-geodata-manager>
     </mat-drawer>
     <mat-drawer-content>
         <div class="map-container-area">
             <div style="width: 100%; height: 100%;display: inline-block;">
-                <app-open-layer #mapOpenLayer></app-open-layer>
+                <app-open-layer #mapOpenLayer [map]="mapLayers"></app-open-layer>
             </div>
         </div>
         <div class="button-extends-options">
