--- a/frontendSIGUI/src/styles.scss
+++ b/frontendSIGUI/src/styles.scss
@@ -86,12 +86,56 @@ $my-app-theme-custom: map-merge($custom-theme, (foreground: $mat-foreground));
     border: 2px solid #013141; /* Azure */
     color: black;
 }
-
+//Configuração dos comporentes ANGULAR
 .component{
     height: 100%;
     display: inline-block;
     width: 100%;
 }
+
+//Header Subtitle GEODADADOS
+.header{
+    width: 100%;
+    height: 70px;
+    overflow: hidden;
+    text-align: center;
+    padding-top: 10px;
+}
+.subtitle-nav{
+    width:100%; 
+    height: 60px;
+  //  background-color: mat-color($accent);;
+}
+
+.sidenav-container{
+    width: auto; 
+    float: left;
+    height: 100%; 
+    border: 1px solid #555;
+    //background-color: rgb(129, 129, 129);
+    flex: 1 1 auto;
+    align-items: center;
+    flex-direction: row;
+   // overflow: hidden;
+   // justify-content: center;        
+}
+
+.container-div{
+    width: auto; 
+    height: 100%;
+    float: left;
+    padding-right: 15px;
+    padding-left: 15px;     
+}
+
+.container{
+    width: 100%;
+    height: auto; 
+    background-color: white;
+    display: flex;
+    align-items: center;    
+}
+
 
 //Definindo temas base
 // @use '../node_modules/@angular/material' as mat;
