--- a/frontendSIGUI/src/app/components/angular-components/geodata/geo-elements/manage-city/manage-city.component.scss
+++ b/frontendSIGUI/src/app/components/angular-components/geodata/geo-elements/manage-city/manage-city.component.scss
@@ -1,50 +1,52 @@
-::ng-deep .mat-grid-tile-content{
-    justify-content : left !important;
-    align-items: flex-start !important;
-}
+// ::ng-deep .mat-grid-tile-content{
+//     justify-content : left !important;
+//     align-items: flex-start !important;
+// }
 
-::ng-deep .mat-form-field {
-     /* margin: 20px 0px 0px 0px; */
-    width: 100%; 
-     /* background-color: bisque;      */
-}
+// ::ng-deep .mat-form-field {
+//      /* margin: 20px 0px 0px 0px; */
+//     width: 100%; 
+//      /* background-color: bisque;      */
+// }
 
-::ng-deep .mat-grid-tile {
-    padding-top: 30px !important;
-    background-color: bisque;     
-}
-.grid-tile{
-    padding-top: 10px;
-}
-.div-content-form{
-    width: 100%;
-}
-.div-item-content-form{
-    float: right;
-    width: 100%;
-}
-.content-form{
-    width: 40%;
-    margin: 20px 0px 0px 20px;
-    display: inline-block;
-}
-.content-form-principal{
-    width: 82%;
-    margin: 20px 0px 0px 20px;
-    display: inline-block;
-}
-.content-button{    
-    position: absolute;
-    right: 150px;  
-}
+// ::ng-deep .mat-grid-tile {
+//     padding-top: 30px !important;
+//     background-color: bisque;     
+// }
 
-.elements_body{
-    width: 300px;
-    height: auto;
-    display: block;
-    margin: 0 auto;
-        /* background-color: red; */
-}
+
+// .grid-tile{
+//     padding-top: 10px;
+// }
+// .div-content-form{
+//     width: 100%;
+// }
+// .div-item-content-form{
+//     float: right;
+//     width: 100%;
+// }
+// .content-form{
+//     width: 40%;
+//     margin: 20px 0px 0px 20px;
+//     display: inline-block;
+// }
+// .content-form-principal{
+//     width: 82%;
+//     margin: 20px 0px 0px 20px;
+//     display: inline-block;
+// }
+// .content-button{    
+//     position: absolute;
+//     right: 150px;  
+// }
+
+// .elements_body{
+//     width: 300px;
+//     height: auto;
+//     display: block;
+//     margin: 0 auto;
+//         /* background-color: red; */
+// }
 
 .wrapper-form{
     margin-top: 20px;
