--- a/frontendSIGUI/src/app/components/angular-components/geodata/geo-elements/manipulates/manipulate-county/manipulate-county.component.html
+++ b/frontendSIGUI/src/app/components/angular-components/geodata/geo-elements/manipulates/manipulate-county/manipulate-county.component.html
@@ -1,11 +1,10 @@
-<form [formGroup]="searchCountyForm" (ngSubmit)="getFeatureCounty()"> 
+<form [formGroup]="searchCountyForm" class="form-search" (ngSubmit)="getFeatureCounty()"> 
 <div class="wrapper">
     <div class="box-field"> 
         <h3>GERENCIAR MUNICIPIO</h3>
         <div class="divider-div header-light-pallete"></div>
        
-    </div>
-   
+    </div>   
         <div class="box-field"> 
             <div style="width: auto;">
                 <label>Buscar Municipio </label>
@@ -20,25 +19,25 @@
             </button>  
         </div>
     <div class="button-colum">
-        <button mat-flat-button class="button-control-data" color="primary" (click)="onClickShapeFile()"> 
+        <button mat-flat-button type="button" class="button-control-data" color="primary" (click)="onClickShapeFile()"> 
             <mat-icon >home</mat-icon><br> 
             <span> ShapeFiles Municipios</span>           
         </button>                   
     </div>
     <div class="button-colum">
-        <button mat-flat-button class="button-control-data" color="primary" (click)="onClickSelectCounty()"> 
+        <button mat-flat-button type="button" class="button-control-data" color="primary" (click)="onClickSelectCounty()"> 
             <mat-icon >home</mat-icon><br> 
             <span>Manipular Limites Municipais</span>           
         </button>   
     </div>
     <div class="button-colum">
-        <button mat-flat-button class="button-control-data" color="primary" (click)="addLayerVetorMunicipios()"> 
+        <button mat-flat-button type="button" class="button-control-data" color="primary" (click)="addLayerVetorMunicipios()"> 
             <mat-icon >home</mat-icon><br> 
             <span>Buscar Limites Municipais</span>           
         </button> 
     </div>
     <div class="box-field">
         <mat-divider></mat-divider>
-    </div>   
+    </div>      
 </div> 
-   </form>
+</form>
