--- a/frontendSIGUI/src/app/components/angular-components/geodata/sidenavs/geodata-manager/geodata-manager.component.html
+++ b/frontendSIGUI/src/app/components/angular-components/geodata/sidenavs/geodata-manager/geodata-manager.component.html
@@ -3,42 +3,51 @@
  </div>
 <div class="sidenav-container color-pallete" >
     <mat-nav-list style="width: auto;">
-        <mat-list-item>
+    <mat-list-item>
         <mat-icon mat-list-icon class="sidenav-button" (click)="isExpanded = !isExpanded" [ngClass]="{'rotated':isExpanded}">chevron_right</mat-icon> 
-        </mat-list-item>  
-        <mat-list-item >
-            <mat-icon mat-list-icon class="sidenav-button">home</mat-icon> 
-            <span *ngIf="isExpanded">Home</span>        
-        </mat-list-item>
-        <mat-list-item >
-            <mat-icon mat-list-icon class="sidenav-button">home</mat-icon> 
-            <span *ngIf="isExpanded" (click)="openDialog()">File</span>        
-        </mat-list-item>
+    </mat-list-item> 
+    <mat-list-item (click)="openUnit()">
+        <mat-icon mat-list-icon class="sidenav-button">grid_on</mat-icon> 
+        <span *ngIf="isExpanded">Estado</span>        
+    </mat-list-item>
+    <mat-list-item (click)="openCounty()">
+        <mat-icon mat-list-icon class="sidenav-button" >grid_on</mat-icon> 
+        <span *ngIf="isExpanded">Municipio</span>        
+    </mat-list-item>
+    <mat-list-item (click)="openDistrict()">
+        <mat-icon mat-list-icon class="sidenav-button">grid_on</mat-icon> 
+        <span *ngIf="isExpanded">Distrito</span>        
+    </mat-list-item>
+    <mat-list-item (click)="openStreet()">
+        <mat-icon mat-list-icon class="sidenav-button">grid_on</mat-icon> 
+        <span *ngIf="isExpanded">Rua</span>        
+    </mat-list-item>
+    <mat-list-item (click)="openPublicPlace()">
+        <mat-icon mat-list-icon class="sidenav-button">grid_on</mat-icon> 
+        <span *ngIf="isExpanded">Logradouro</span>        
+    </mat-list-item>
+    <mat-list-item (click)="openInfrastructure()">
+        <mat-icon mat-list-icon class="sidenav-button">grid_on</mat-icon> 
+        <span *ngIf="isExpanded">Infraestrutura</span>        
+    </mat-list-item>
+    <mat-list-item (click)="openEquipamentUrban()">
+        <mat-icon mat-list-icon class="sidenav-button">grid_on</mat-icon> 
+        <span *ngIf="isExpanded">Equipamento Urbano</span>        
+    </mat-list-item>
+    <mat-list-item (click)="openNetwork()">
+        <mat-icon mat-list-icon class="sidenav-button">grid_on</mat-icon> 
+        <span *ngIf="isExpanded">Rede</span>        
+    </mat-list-item>
+
     </mat-nav-list>
 </div>
-<div class="container-div">                
-    <div class="container">          
-        <app-manipulate-county></app-manipulate-county>                    
-    </div>
-   <!-- managerVizualizaton.session_county -->
-    <div class="container" *ngIf="true">          
-        <app-table-county></app-table-county>
-    </div>
-    <div class="container">  
-        
-        <div class="wrapper-manipulation">
-            <div class="box-field-ex">
-                <button mat-flat-button class="button-control-data" color="primary" > 
-                    <mat-icon >home</mat-icon><br> 
-                    <span>Excluir Municipios</span>           
-                </button>   
-            </div>
-            <div class="box-field-ed">
-                <button mat-flat-button class="button-control-data" color="primary" > 
-                    <mat-icon >home</mat-icon><br> 
-                    <span> Editar Municipios</span>           
-                </button>               
-            </div>
-        </div> 
-    </div>
-</div>
+<!-- <div class="container-div">                 -->
+    <app-container-unit *ngIf="managerVizualizaton.session_state"></app-container-unit >
+    <app-container-county *ngIf="managerVizualizaton.session_county"></app-container-county>
+    <app-container-district *ngIf="managerVizualizaton.session_ditrict"></app-container-district>
+    <app-container-street *ngIf="managerVizualizaton.session_streat"></app-container-street>
+    <app-container-public-place *ngIf="managerVizualizaton.session_public_place"></app-container-public-place>
+    <app-container-infrastructure *ngIf="managerVizualizaton.session_infrastructure"></app-container-infrastructure>
+    <app-container-urban-equipment *ngIf="managerVizualizaton.session_estructure"></app-container-urban-equipment>
+    <app-container-urban-network *ngIf="false"></app-container-urban-network>    
+<!-- </div> -->
