--- a/frontendSIGUI/src/app/layout/geo-data/geo-data.component.html
+++ b/frontendSIGUI/src/app/layout/geo-data/geo-data.component.html
@@ -1,7 +1,7 @@
 <mat-drawer-container autosize>
     <mat-drawer #drawer class="nav-container " mode="side" position="start" [opened]="isShowing">
         <app-layer-manager *ngIf="managerManu.session_layers" [layers]="mapLayers"  style="width: 100%; height: 120%;" ></app-layer-manager>
-        <app-geodata-manager *ngIf="managerManu.session_geodata" [managerVizualizaton]="managerVizualizaton" style="width: 100%; height: 120%;" ></app-geodata-manager>
+        <app-geodata-manager *ngIf="managerManu.session_geodata" [Vizualizaton]="managerVizualizaton" style="width: 100%; height: 120%;" ></app-geodata-manager>
     </mat-drawer>
     <mat-drawer-content>
         <div class="map-container-area">
@@ -22,8 +22,23 @@
  
     </mat-drawer-content>
     <mat-drawer class="sidenav-container-right" mode="side" position="end" [opened]="isShowingNavRight">
+        <div class="container" *ngIf="managerManipulation.session_county"> 
+            <app-manage-unit></app-manage-unit>
+        </div>
         <div class="container" *ngIf="managerManipulation.session_county">          
             <app-manage-county></app-manage-county>
         </div>
+        <div class="container" *ngIf="managerManipulation.session_county"> 
+            <app-manage-district></app-manage-district>
+        </div>
+        <div class="container" *ngIf="managerManipulation.session_county"> 
+            <app-manage-infrastructure></app-manage-infrastructure>
+        </div>
+        <div class="container" *ngIf="managerManipulation.session_county"> 
+            <app-manage-street></app-manage-street>
+        </div>
+        <div class="container" *ngIf="managerManipulation.session_county"> 
+            <app-manage-public-place></app-manage-public-place>
+        </div>  
     </mat-drawer>
 </mat-drawer-container>
