--- a/frontendSIGUI/src/app/components/angular-components/geodata/geo-elements/manipulates/manipulate-urban-network/manipulate-urban-network.component.html
+++ b/frontendSIGUI/src/app/components/angular-components/geodata/geo-elements/manipulates/manipulate-urban-network/manipulate-urban-network.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="searchForm" class="form-search" (ngSubmit)="getFeatureCounty()"> 
     <div class="wrapper">
         <div class="box-field"> 
-            <h3>GERENCIAR MUNICIPIO</h3>
+            <h3>GERENCIAR NETWORK</h3>
             <div class="divider-div header-light-pallete"></div>
            
         </div>   
