--- a/frontendSIGUI/src/app/components/maps-components/map-interations-components/popup-control/popup-control-county/popup-control-county.component.html
+++ b/frontendSIGUI/src/app/components/maps-components/map-interations-components/popup-control/popup-control-county/popup-control-county.component.html
@@ -1,29 +1,21 @@
 
-<!-- <table>
+ <table> 
     <tr>
-        <th colspan="3">Opções para o Vertice:</th>
+        <h3>MUNICIPIO</h3>
+        <div class="divider-div header-light-pallete"></div>
     </tr>
-    <tr> -->
-        <td> Municipio:</td>
-        <td>  
-            <table>
-                <tr>
-                    <td>
-                    <button mat-icon-button color="primary">
-                        <mat-icon>delete</mat-icon>
-                    </button>    
-                    </td>
-                    <td>
-                    <button class="button-event" (click)="connectFeatureFromCounty()">
-                        <mat-icon >home</mat-icon> 
-                        Adicionar 
-                    </button>
-                    </td>
-                </tr>
-            </table>
+    <tr> 
+        <td class="col-header"></td>
+        <td class="col-content">
+        <button mat-icon-button color="primary">
+            <mat-icon>delete</mat-icon>
+        </button>    
         </td>
-        <!-- <td>                     
-            <button id='btn_AssociarMunicipio' mat-flat-button color="primary" > Associar </button>
-        </td> -->
-    <!-- </tr>
-</table>   -->
+        <td class="col-content">
+        <button class="button-event" (click)="connectFeatureFromCounty()">
+            <mat-icon >home</mat-icon> 
+            Adicionar 
+        </button>
+        </td>
+    </tr>  
+</table>   
