--- a/frontendSIGUI/src/app/components/maps-components/map-interations-components/popup-control/popup-control-infrastructure/popup-control-infrastructure.component.html
+++ b/frontendSIGUI/src/app/components/maps-components/map-interations-components/popup-control/popup-control-infrastructure/popup-control-infrastructure.component.html
@@ -1,4 +1,25 @@
-<table>
+<table> 
+    <tr>
+        <h3>Infraestrutura</h3>
+        <div class="divider-div header-light-pallete"></div>
+    </tr>
+    <tr> 
+        <td class="col-header"></td>
+        <td class="col-content">
+        <button mat-icon-button color="primary">
+            <mat-icon>delete</mat-icon>
+        </button>    
+        </td>
+        <td class="col-content">
+        <button class="button-event" (click)="connectFeatureFromInfrastructure()">
+            <mat-icon >home</mat-icon> 
+            Adicionar 
+        </button>
+        </td>
+    </tr>  
+</table>  
+
+<!-- <table>
     <tr>
         <th colspan="3">Opções para o Vertice:</th>
     </tr>
@@ -14,4 +35,4 @@
             <button id='btn_AdicionarRede' mat-flat-button color="primary" (click)="associateFeatureFromInfrastructure()"> Associar Rede </button>
         </td>
     </tr>
-</table>  
+</table>   -->
