--- a/frontendSIGUI/src/app/components/maps-components/map-interations-components/popup-control/popup-control-street/popup-control-street.component.html
+++ b/frontendSIGUI/src/app/components/maps-components/map-interations-components/popup-control/popup-control-street/popup-control-street.component.html
@@ -1,14 +1,20 @@
-<table>
+<table> 
     <tr>
-        <th colspan="3">Opções para o Vertice:</th>
+        <h3>Rua</h3>
+        <div class="divider-div header-light-pallete"></div>
     </tr>
-    <tr>
-        <td> Rua:</td>
-        <td>                     
-            <button [routerLink]="['manager-city']" id='btn_AdicionarRede' mat-flat-button color="primary" (click)="enableDivMunicipio()"> Adicionar </button>
+    <tr> 
+        <td class="col-header"></td>
+        <td class="col-content">
+        <button mat-icon-button color="primary">
+            <mat-icon>delete</mat-icon>
+        </button>    
         </td>
-        <td>                     
-            <button id='btn_AdicionarRede' mat-flat-button color="primary" (click)="connectFeatureFromStreet()"> Associar </button>
+        <td class="col-content">
+        <button class="button-event" (click)="connectFeatureFromStreet()">
+            <mat-icon >home</mat-icon> 
+            Adicionar 
+        </button>
         </td>
-    </tr>
+    </tr>  
 </table>  
