--- a/frontendSIGUI/src/app/components/maps-components/map-interations-components/popup-control/popup-control-unit/popup-control-unit.component.html
+++ b/frontendSIGUI/src/app/components/maps-components/map-interations-components/popup-control/popup-control-unit/popup-control-unit.component.html
@@ -1,3 +1,24 @@
+<table> 
+    <tr>
+        <h3>Estado</h3>
+        <div class="divider-div header-light-pallete"></div>
+    </tr>
+    <tr> 
+        <td class="col-header"></td>
+        <td class="col-content">
+        <button mat-icon-button color="primary">
+            <mat-icon>delete</mat-icon>
+        </button>    
+        </td>
+        <td class="col-content">
+        <button class="button-event" (click)="connectFeatureFromState()">
+            <mat-icon >home</mat-icon> 
+            Adicionar 
+        </button>
+        </td>
+    </tr>  
+</table>  
+
 <table>
     <tr>
         <th colspan="3">Opções para o Vertice:</th>
