--- a/frontendSIGUI/src/app/components/angular-components/geodata/geo-elements/manage-city/manage-city.component.html
+++ b/frontendSIGUI/src/app/components/angular-components/geodata/geo-elements/manage-city/manage-city.component.html
@@ -91,8 +91,11 @@
 
     </div>  
     <div class="box-form-r">   
-        <button mat-flat-button color="primary"> 
+        <button [disabled]=" !saving" mat-flat-button color="primary"> 
             <mat-icon >save</mat-icon>                 
+        </button> 
+        <button [disabled]=" !editable" mat-flat-button color="primary"> 
+            <mat-icon >save_as</mat-icon>                 
         </button> 
     </div>  
       
