--- a/frontendSIGUI/src/styles.scss
+++ b/frontendSIGUI/src/styles.scss
@@ -18,8 +18,8 @@ $custom-theme: mat-light-theme($custom-app-primary,$custom-app-secondary,$custom
         divider:           rgba(0,0,0),//$black-12-opacity,
         dividers:          rgba(0,0,0),
         disabled:          rgba($color, 0.38),
-        disabled-button:   rgba($color, 0.38),
-        disabled-text:   rgba(255,255,255),
+        disabled-button:   rgb(8, 0, 49),
+        disabled-text:   rgb(8, 0, 49),
         hint-text:       rgba(255,255,255),
         secondary-text:  rgba(151, 28, 28),
         icon:            rgb(8, 0, 49),
